# DMath-Engine

./: .dmath-overrides.xdev  .gitignore  CMakeLists.txt  Math_Helper.h  README.txt  build.py
Matrix3f/: CMakeLists.txt
Matrix3f/include/: Matrix3f.h  Matrix3fHelpers.h
Matrix3f/src/: Matrix3f.cpp  Matrix3fHelpers.cpp
Quaternion/: CMakeLists.txt
Quaternion/src/: Quaternion.cpp
Vector3f/: CMakeLists.txt
Vector3f/include/: Vector3f.h  Vector3fHelpers.h
Vector3f/src/: Vector3fHelpers.cpp
cmake/: install-helpers.cmake
scripts/: configure_dconfig.sh
src/: CMakeLists.txt  D-Math-Engine.h
src/Matrix3f/: CMakeLists.txt  Matrix3f.cpp  Matrix3f.h  Matrix3f_Statics.h
src/Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.h
src/Vector3f/: CMakeLists.txt  Vector3f.cpp  Vector3f.h  Vector3f_Statics.h
tests/: CMakeLists.txt  GTest_Helper.h  matrix-unit-test  quaternion-unit-test  unit_test_matrix3f.cpp  unit_test_quaternion.cpp  unit_test_vector3f.cpp  vector3f-unit-test
tests/Testing/Temporary/: CTestCostData.txt
